0025908: BSpline (U2 < U1) in HLRBRep_HLRToShape

Test case for issue CR25908